brokers/scorpio/map/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: map
  name: map
spec:
  selector:
    matchLabels:
      app: map
  replicas: 1
  template:
    metadata:
      labels:
        app: map
    spec:
      serviceAccount: scorpio
      serviceAccountName: scorpio
      containers:
        - imagePullPolicy: IfNotPresent
          image: scorpiobroker/ngsildmap
          name: map
