brokers/scorpio/map/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: map
spec:
  type: ClusterIP
  ports:
    - port: 8050
      targetPort: 8050
      protocol: TCP
      name: http
  selector:
    app: map
