brokers/scorpio/map/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: map
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: federation-wildcard-tls-secret
spec:
  host: map.federation.fiware.dev
  to:
    kind: Service
    name: map
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
